# simple-watsonx-enviroment

./: .dockerignore  .gitignore  Dockerfile  Makefile  README.md  pyproject.toml  simple_watsonx_environment_colab.ipynb
.github/workflows/: dockerhub.yml  ghcr.yml
notebooks/: .env.sample  watsonx_quickstart.ipynb
scripts/: install copy.sh  install.sh
scripts/mac/: install_docker.sh  install_python311.sh
scripts/ubuntu/: install_docker.sh  install_python311.sh
scripts/windows/: install_docker.ps1  install_python_win.ps1
